--- a/process-escape-windows.cabal
+++ b/process-escape-windows.cabal
@@ -68,4 +68,6 @@ test-suite process-escape-windows-test
     , Win32
     , base >=4.7 && <5
     , process-escape-windows
+    , string-interpolate
+    , unliftio
   default-language: Haskell2010
