--- a/package.yaml
+++ b/package.yaml
@@ -2,22 +2,12 @@ name:                process-escape-windows
 version:             0.1.0.0
 github:              "githubuser/process-escape-windows"
 license:             BSD-3-Clause
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2025 Author name here"
+author:              "Tom McLaughlin"
+maintainer:          "tom@codedown.io"
 
 extra-source-files:
 - README.md
 - CHANGELOG.md
-
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/process-escape-windows#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -34,9 +24,12 @@ ghc-options:
 - -Wpartial-fields
 - -Wredundant-constraints
 
+default-extensions:
+- LambdaCase
+- QuasiQuotes
+
 library:
   source-dirs: src
-
 
 executables:
   process-escape-windows-exe:
@@ -50,15 +43,18 @@ executables:
     - process-escape-windows
 
 tests:
-  process-escape-windows-test:
+  tests:
     main:                Spec.hs
-    source-dirs:         test
+    source-dirs:
+    - test
+    - test-lib
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - process-escape-windows
+    - sandwich
     - string-interpolate
     - unliftio
     - QuickCheck
