--- a/process-escape-windows.cabal
+++ b/process-escape-windows.cabal
@@ -6,8 +6,8 @@ cabal-version: 2.2
 
 name:           process-escape-windows
 version:        0.1.0.0
-homepage:       https://github.com/githubuser/process-escape-windows#readme
-bug-reports:    https://github.com/githubuser/process-escape-windows/issues
+homepage:       https://github.com/thomasjm/process-escape-windows#readme
+bug-reports:    https://github.com/thomasjm/process-escape-windows/issues
 author:         Tom McLaughlin
 maintainer:     tom@codedown.io
 license:        BSD-3-Clause
@@ -19,7 +19,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/process-escape-windows
+  location: https://github.com/thomasjm/process-escape-windows
 
 library
   exposed-modules:
@@ -37,24 +37,6 @@ library
   build-depends:
       Win32
     , base >=4.7 && <5
-  default-language: Haskell2010
-
-executable process-escape-windows-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_process_escape_windows
-  autogen-modules:
-      Paths_process_escape_windows
-  hs-source-dirs:
-      app
-  default-extensions:
-      LambdaCase
-      QuasiQuotes
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      Win32
-    , base >=4.7 && <5
-    , process-escape-windows
   default-language: Haskell2010
 
 test-suite tests
@@ -79,6 +61,7 @@ test-suite tests
     , base >=4.7 && <5
     , process-escape-windows
     , sandwich
+    , sandwich-quickcheck
     , string-interpolate
     , unliftio
   default-language: Haskell2010
