--- a/process-escape-windows.cabal
+++ b/process-escape-windows.cabal
@@ -59,9 +59,12 @@ test-suite tests
       QuickCheck
     , Win32
     , base >=4.7 && <5
+    , filepath
+    , process
     , process-escape-windows
     , sandwich
     , sandwich-quickcheck
     , string-interpolate
+    , text
     , unliftio
   default-language: Haskell2010
