Add Main.hs for ad-hoc tests

--- a/process-escape-windows.cabal
+++ b/process-escape-windows.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.38.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -37,6 +37,27 @@ library
   build-depends:
       Win32
     , base >=4.7 && <5
+  default-language: Haskell2010
+
+executable demo
+  main-is: Main.hs
+  other-modules:
+      Paths_process_escape_windows
+  autogen-modules:
+      Paths_process_escape_windows
+  hs-source-dirs:
+      app
+  default-extensions:
+      LambdaCase
+      QuasiQuotes
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -O2 -W
+  build-depends:
+      Win32
+    , base >=4.7 && <5
+    , directory
+    , filepath
+    , process
+    , string-interpolate
   default-language: Haskell2010
 
 test-suite tests
