--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,20 @@ default-extensions:
 library:
   source-dirs: src
 
+executables:
+  demo:
+    main: Main.hs
+    source-dirs: app
+    ghc-options:
+    - -threaded
+    - -O2
+    - -W
+    dependencies:
+    - directory
+    - filepath
+    - process
+    - string-interpolate
+
 tests:
   tests:
     main:                Spec.hs
